examples added, typo correction

--- a/transport/preambule/physics.tex
+++ b/transport/preambule/physics.tex
@@ -15,6 +15,8 @@
 \newcommand{\drag}{\force\txt{d}} % drag force
 \newcommand{\buoy}{\force\txt{b}} % buoyancy force
 %
+\newcommand{\kspring}{\kappa} % spring constant
+%
 %\newcommand{\vattpos}{\vat{t, \pos}} % value at t and position
 %
 %%% ENERGY TRANSPORT
@@ -86,7 +88,7 @@
 \newcommand{\phdimtemp}{\Theta}   % physical dimension of temperature
 \newcommand{\chpq}[1]{{#1}_{c}}   % characteristic physical quantity
 \newcommand{\scpq}[1]{\bar{#1}}   % scaled physical quantity
-
+\newcommand{\dimfunc}{\psi}       % dimensionless function
 %
 %%% DIMENSIONLESS QUANTITIES
 %
