--- a/transport/sections/notation.tex
+++ b/transport/sections/notation.tex
@@ -118,6 +118,7 @@
 \item surface tension: surftens, $\surftens$.
 \item frequency: freq, $\freq$.
 \item power: power, $\power$.
+\item spring constant: kspring, $\kspring$.
 \end{itemize}
 
 
@@ -191,6 +192,7 @@
 \item dimensionless quantity: kdim, $\kdim$.
 \item characteristic physical quantity: chpq, $\chpq\vel$.
 \item scaled physical quantity: scpq, $\scpq\vel$.
+\item dimensionless function: dimfunc, $\dimfunc$.
 \item Biot number: kbiot, $\kbiot$.
 \item Reynolds number: kreynolds, $\kreynolds$.
 \item Prandtl number: kprandtl, $\kprandtl$.
