--- a/transport/transport.tex
+++ b/transport/transport.tex
@@ -12,6 +12,7 @@
 %
 \input{./sections/dim-analysis}
 \input{./sections/dimless-quantities}
+\input{./sections/examples}
 \input{./sections/energy-transport}
 %
 \appendix
