--- a/applied-ga/sections/algebra.tex
+++ b/applied-ga/sections/algebra.tex
@@ -153,7 +153,7 @@ Consider a set $\set S$. For $a, b\in\set S$, let $\bprod$ be a binary operation
 \subsubsection{Algebra}
 Let $a, b\in\nset Vn$. Then, define the \lingo{inner product of $a$ and $b$} by
 \beq
-a\iprod b \defby \acom ab = \xacom ab\,.
+2\left(a\iprod b\right) \defby \acom ab = \xacom ab\,.
 \eeq
 
 For \emph{vectors}, the inner product is symmetric: $a\iprod b = b\iprod a$.
@@ -184,7 +184,7 @@ Call two vectors \lingo{orthogonal}, \aka \lingo{perpendicular}, denoted $a\orth
 \subsubsection{Algebra}
 Let $a, b\in\nset Vn$. Then, define the \lingo{outer product of $a$ and $b$} by
 \beq
-a\oprod b \defby \com ab = \xcom ab\,.
+2\left(a\oprod b\right) \defby \com ab = \xcom ab\,.
 \eeq
 
 For \emph{vectors}, the outer product is anti-symmetric. Let $a,b\in\nset Vn$, then $a\iprod b = -b\oprod a$.
