--- a/transport/sections/dimless-quantities.tex
+++ b/transport/sections/dimless-quantities.tex
@@ -1,4 +1,4 @@
-\section{Dimensionless Quantities}
+\section{Dimensionless quantities}
 Dimensionless groups can be classified into three broad categories: the dimensionless fluxes, the ratios of convection and diffusion and the ratios of different types of diffusion. Before proceeding to define dimensionless quantities, we first define the diffusion coefficients for mass, momentum and energy, in order to provide a definite basis for the discussion. Here, we restrict ourselves to the macroscopic definition.
 
 
