--- a/transport/sections/notation.tex
+++ b/transport/sections/notation.tex
@@ -16,6 +16,7 @@
 \subsubsection{Functions}
 \begin{itemize}
 \item function value at: vat x, $\vat x$.
+\item order of: orderof, $\orderof$.
 \end{itemize}
 
 
@@ -38,6 +39,7 @@
 \item outer product: oprod, $a\oprod b$.
 \item inverse: inv a, $\inv a$.
 \item unit vector: uvec a, $\uvec a$.
+\item unit frame basis vector: ufbvec a, $\ufbvec a$.
 \end{itemize}
 
 
@@ -64,6 +66,7 @@
 \item dot dot derivative: ddt a, $\ddt a$.
 \item expanded ordinary derivative: xod at, $\xod at$.
 \item expanded partial derivative: xpd at, $\xpd at$.
+\item n expanded partial derivative: nxpd at2, $\nxpd at2$.
 \item indexed ordinary derivative: iod t, $\iod t$.
 \item indexed partial derivative: ipd t, $\ipd t$.
 \item indexed geometric derivative: igder k, $\igder k$.
@@ -119,6 +122,9 @@
 \item frequency: freq, $\freq$.
 \item power: power, $\power$.
 \item spring constant: kspring, $\kspring$.
+\item energy: energy, $\energy$.
+\item kinetic energy: ken, $\ken$.
+\item potential energy: pen, $\pen$.
 \end{itemize}
 
 
@@ -152,10 +158,13 @@
 \subsubsection{Mass transport}
 \begin{itemize}
 \item n (number of) particles: npart, $\npart$.
+\item number of particles density: npartdens, $\npartdens$.
 \item mass: mass, $\mass$.
 \item mass density: dens, $\dens$.
 \item chemical reaction thermal energy: chthen, $\chthen$.
 \item mass concentration: conc, $\conc$.
+\item mass diffusion coefficient: kdiff, $\kdiff$.
+\item mean free path: mfpath, $\mfpath$.
 \end{itemize}
 
 \subsubsection{Momentum transport}
