--- a/transport/transport.tex
+++ b/transport/transport.tex
@@ -12,6 +12,8 @@
 %
 \input{./sections/dim-analysis}
 \input{./sections/dimless-quantities}
+\input{./sections/diffusion}
+\input{./sections/uni-dir-trans}
 \input{./sections/examples}
 \input{./sections/energy-transport}
 %
