--- a/transport/preambule/maths.tex
+++ b/transport/preambule/maths.tex
@@ -25,6 +25,7 @@
 %%% FUNCTIONS
 %
 \newcommand{\vat}[1]{\left[{#1}\right]} % function value at
+\newcommand{\orderof}{O}                % order of (magnitude)
 %
 %%% GEOMETRIC OBJECTS
 %
@@ -68,6 +69,7 @@
 %
 \newcommand{\xod}[2]{\dfrac{\dx{#1}}{\dx{#2}}}           % expanded ordinary derivative
 \newcommand{\xpd}[2]{\dfrac{\partial{#1}}{\partial{#2}}} % expanded partial derivative
+\newcommand{\nxpd}[3]{\dfrac{\partial^{#3}{#1}}{\partial{#2}^{#3}}} % n expanded partial derivative
 %
 %%% INDEX NOTATION
 %
@@ -87,6 +89,8 @@
 %
 \newcommand{\fvec}[2]{{#1}^{#2}} % frame (contravariant) components
 \newcommand{\rvec}[2]{{#1}_{#2}} % reciprocal frame (covariant) components
+%
+\newcommand{\ufbvec}[1]{\uvec{\bvec}_{#1}} % unit frame basis vector
 %
 %%% MATRICES
 %
