--- a/transport/sections/dim-analysis.tex
+++ b/transport/sections/dim-analysis.tex
@@ -1,4 +1,4 @@
-\section{Dimensional Analysis}
+\section{Dimensional analysis}
 %
 \epigraph{No investigator should allow himself to proceed to the detailed solution of a problem until he has made a dimensional analysis of the nature of the solution which will be obtained, and convinced himself by appeal to experiment that the points of view embodied in the underlying equations are sound.}
 {Percy Williams Bridgman}{Dimensional Analysis [Yale University Press, 1922]}
