typos and chapters added

--- a/preambule/maths.tex
+++ b/preambule/maths.tex
@@ -5,6 +5,8 @@
 \newcommand{\beq}{\begin{equation*}}
 \newcommand{\eeq}{\end{equation*}}
 %
+\newcommand{\eqtxt}[1]{\text{[{#1}]}} % text in equations
+%
 %\newcommand{\defby}{\equiv}   % defined by
 \newcommand{\defby}{\coloneqq} % defined by
 %\newcommand{\defby}{\doteq}   % defined by
