--- a/transport/preambule/maths.tex
+++ b/transport/preambule/maths.tex
@@ -54,6 +54,8 @@
 \DeclareMathOperator{\grad}{grad} % gradient
 \DeclareMathOperator{\lap}{lap}   % Laplace operator
 %
+\newcommand{\dirdev}[2]{\gder_{#1}{#2}} % directional derivative
+%
 %%% CALCULUS
 %
 \newcommand{\dx}{\text{d}} % differential operator
