--- a/transport/preambule/physics.tex
+++ b/transport/preambule/physics.tex
@@ -63,6 +63,7 @@
 \newcommand{\dens}{\rho}  % mass density
 \newcommand{\chthen}{r}   % chemical reaction thermal energy
 \newcommand{\conc}{c}     % mass concentration
+\newcommand{\mfrac}{w}    % mass fraction
 \newcommand{\kdiff}{\phi} % diffusion coefficient
 \newcommand{\mfpath}{\lambda} % mean free path
 %
@@ -90,7 +91,7 @@
 \DeclareMathOperator{\unit}{unit}
 \newcommand{\kdim}{\Pi}          % dimless quantity
 %
-\newcommand{\phdim}[1]{\text{#1}} % physical dimension
+\newcommand{\phdim}[1]{\mathsf{#1}}% physical dimension
 \newcommand{\phdimtemp}{\Theta}   % physical dimension of temperature
 \newcommand{\chpq}[1]{{#1}_{c}}   % characteristic physical quantity
 \newcommand{\scpq}[1]{\bar{#1}}   % scaled physical quantity
