--- a/transport/sections/notation.tex
+++ b/transport/sections/notation.tex
@@ -47,6 +47,7 @@
 \begin{itemize}
 \item geometric derivative: gder, $\gder$.
 \item Laplace operator (derivative): lder, $\lder$.
+\item directional derivative: dirdev ab, $\dirdev ab$.
 \item divergence: div, $\div$.
 \item gradient: grad, $\grad$.
 \item Laplace operator: lap, $\lap$.
@@ -163,6 +164,7 @@
 \item mass density: dens, $\dens$.
 \item chemical reaction thermal energy: chthen, $\chthen$.
 \item mass concentration: conc, $\conc$.
+\item mass fraction: mfrac, $\mfrac$.
 \item mass diffusion coefficient: kdiff, $\kdiff$.
 \item mean free path: mfpath, $\mfpath$.
 \end{itemize}
