--- a/transport/transport.tex
+++ b/transport/transport.tex
@@ -14,6 +14,7 @@
 \input{./sections/dimless-quantities}
 \input{./sections/diffusion}
 \input{./sections/uni-dir-trans}
+\input{./sections/conservation-laws}
 \input{./sections/examples}
 \input{./sections/energy-transport}
 %
